src/test/ui/const-generics/issues/issue-61935.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-61935.rs:9:23
   |
LL |         Self:FooImpl<{N==0}>
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to previous error

